2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region_lanczos):
	iterate	over tiles instead of rows in the destination buffer.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region): moved
	linear and cubic code to their own functions and let them iterate
	over tiles instead of rows in the destination buffer.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* authors.xml: restored alphabetical order.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* Makefile.am: added a dependency for AUTHORS on authors.xsl.

	* authors.xsl: changed to list contributors with their role.

	* AUTHORS: regenerated.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/common/screenshot.c: added checks for X11 Shape
	Extension and build the shaped window feature conditionally.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: added more const qualifiers.

2007-02-25  Marco Ciampa  <ciampix@libero.it>

	* authors.xml: added italian contributor

2007-02-24  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region_nearest):
	operate on tiles instead of iterating row by row.

2007-02-24  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region):
	moved nearest-neighbor code to it's own function to improve
	performance and readability.

2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region): moved
	lanczos code into it's own function to improve readability.

2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.[ch]: do less tile lock and release
	operations by reusing the last locked tile if possible. Allow to
	call pixel_surround_lock() several times without unlocking.

	* app/core/gimp-transform-region.c: don't unlock the PixelSurround
	so that the locked tile can be reused. Yields about 30% speedup
	for transformations.
